testsuite/positive/Issue-1257.n
// REFERENCE: Issue-1257-lib

using System;
using System.Console;

using Nemerle.Utility;

[Foo]
module Program {

    Main() : void {
        def f = Foo(1);
        f.Y = "2";
        WriteLine(f);
    }

}

/*
BEGIN-OUTPUT
1, 2
END-OUTPUT
*/