testsuite/negative/bug-1224.n
module Program
{
  Main() : void
  {
    def b1 = array.[byte](2); // E: Invalid array rank: byte. You can use only '1' in rank of empty array.
    def b2 = array.[object](1); // E: Invalid array rank: object. You can use only '1' in rank of empty array.
  }
}
